test/samples/error/err_incompatible_op.w
func f() : boolean { return 2 > 1 }
var x = 1 + f()