test/samples/error/err_incompatible_op.output
error: line 2:8 incompatible operand types (int + boolean)